# task_masker

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
assets/: TM_map.tmx  TM_map_corrected.tmx  TM_v3.tmx
assets/caveman/: README.md
assets/chatter/: README.md
assets/environment/: README.md
assets/music/: README.md
assets/sfx/: README.md
assets/subscriber/: README.md
assets/ui/: README.md
docs/: integration_tests.tsl  integration_tests.txt
src/: lib.rs  main.rs
src/audio/: background.rs  mod.rs  plugins.rs
src/chat_interactions/: mod.rs  plugins.rs  twitch_chat_reader.rs
src/entities/: chatter.rs  crop.rs  fruit.rs  mod.rs  plugins.rs  streamer.rs  subscriber.rs
src/map/: camera.rs  mod.rs  path_finding.rs  plugins.rs  tiled.rs  tilemap.rs
src/ui/: chatting.rs  mod.rs  plugins.rs  portrait_preferences.rs  screens.rs
src/visual/: animations.rs  environment.rs  mod.rs  plugins.rs
tests/: bevy_path_conversion.rs  chatter.rs  chatting.rs  crop.rs  environment.rs  fruit.rs  mock_plugins.rs  pathfinding.rs  portrait-preference.rs  streamer.rs  subscriber.rs  tilemap.rs  traveling.rs  traveling_tdd.rs
tests/feature-files/: chatter.feature  chatting.feature  crop.feature  environment.feature  fruit.feature  pathfinding.feature  portrait-preference.feature  streamer.feature  subscriber.feature  tilemap.feature  traveling.feature
tests/test-assets/environment/: README.md
tests/test-assets/maps/: blank_tile_in_corner.tmx  heighted_map.tmx  one_tile_isometric.tmx  single_layer_isometric.tmx  smaller_tile_on_map.tmx  two_tiles_layered.tmx  two_vertical_tiles_isometric.tmx  two_vertical_tiles_with_drawing_offset.tmx  two_vertical_tiles_with_offset.tmx
