[package]
name = "task_masker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "^0.12", features = ["wav", "wayland"] }
bevy_ecs_tilemap = { git = "https://github.com/divark/bevy_ecs_tilemap", branch = "0.12-fixes" }
thiserror = "^1.0"
tiled = "^0.11"
rand = "^0.8"
#bevy-inspector-egui = "^0.19"