[package]
name = "task_masker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "^0.13", features = ["wav", "wayland"] }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap.git", rev = "25def41e029626bb5e84fe7aca1f16a1d6beccdc" }
thiserror = "^1.0"
tiled = "^0.11"
rand = "^0.8"

[dev-dependencies]
cucumber = "0.20"
futures = "0.3"

[[test]]
name = "traveling"
harness = false

[[test]]
name = "chatter"
harness = false

[[test]]
name = "streamer"
harness = false
