[package]
name = "task_masker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "^0.14", features = ["wav", "wayland"] }
bevy_ecs_tilemap = "^0.14"
thiserror = "^1.0"
tiled = "^0.12"
rand = "^0.8"
sqlite = "^0.36"
twitch-irc = "^5.0"
tokio = { version = "^1", features = ["full"] }

[dev-dependencies]
cucumber = "^0.21"
futures = "^0.3"

[[test]]
name = "traveling"
harness = false

[[test]]
name = "chatter"
harness = false

[[test]]
name = "streamer"
harness = false

[[test]]
name = "subscriber"
harness = false

[[test]]
name = "fruit"
harness = false

[[test]]
name = "crop"
harness = false

[[test]]
name = "portrait-preference"
harness = false

[[test]]
name = "chatting"
harness = false

[[test]]
name = "environment"
harness = false

[[test]]
name = "pathfinding"
harness = false

[[test]]
name = "tilemap"
harness = false
